  04 Apr 2013; Alon Bar-Lev <alonbl@redhat.com>
  ovirt-image-uploader-3.2.1.ebuild, ovirt-image-uploader-9999.ebuild:
  Use >=dev-python/python-exec-0.3 as it supports symlinks

*ovirt-image-uploader-3.2.1 (03 Apr 2013)

  03 Apr 2013; Alon Bar-Lev <alonbl@redhat.com>
  +ovirt-image-uploader-3.2.1.ebuild, ovirt-image-uploader-9999.ebuild:
  ADd ovirt-image-uploader-3.2.1

*ovirt-iso-uploader-9999 (21 Jan 2013)

  21 Jan 2013; Stijn Tintel <stijn+gentoo@linux-ipv6.be>
  +ovirt-iso-uploader-9999.ebuild:
  Initial import. Ebuild by me.