@@ -1,3 +1,7 @@
+  18 Apr 2013; Alon Bar-Lev <alonbl@gentoo.org>
+  ovirt-image-uploader-3.2.1.ebuild, ovirt-image-uploader-9999.ebuild:
+  move gettext to DEPEND
+
   04 Apr 2013; Alon Bar-Lev <alonbl@redhat.com>
   ovirt-image-uploader-3.2.1.ebuild, ovirt-image-uploader-9999.ebuild:
   Use >=dev-python/python-exec-0.3 as it supports symlinks
